# ehealth_platform

./: .gitignore  Dockerfile  Dockerfile.base  Dockerfile.chatbot-service  Dockerfile.hospital-management  Dockerfile.lab-management  Dockerfile.notification-service  Dockerfile.pharma-management  Dockerfile.template  Dockerfile.user-management  README.md  add_image_columns.bat  add_image_columns.sh  auth_backup.py  build-services.bat  build-services.sh  check_services.bat  cleanup-docker.sh  cleanup.bat  cleanup.sh  db-only.docker-compose.yml  deep_cleanup.bat  deep_cleanup.sh  deploy.bat  deploy.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  fix_organization_ids.bat  init_database.bat  init_schema.bat  install-deps.sh  merge_services.sh  notification-only.yml  rebuild_all.bat  rebuild_services.bat  requirements-base.txt  restart-services.sh  run-dev.bat  run-dev.sh  (+18 more)
services/lab-management/: .coveragerc  Dockerfile  Dockerfile.prod  README.md  alembic.ini  docker-compose.yml  generate_grpc.sh  pyproject.toml  pytest.ini  requirements-dev.txt
services/lab-management/alembic/: env.py
services/lab-management/alembic/versions/: a48744b73ac9_add_audit_log_and_test_order_models.py  add_file_attachments.py
services/lab-management/app/: main.py
services/lab-management/app/api/: deps.py
services/lab-management/app/core/: audit.py  cache.py  config.py  docs.py  exceptions.py  logging_config.py  rate_limiter.py  security.py
services/lab-management/app/db/: base.py  session.py
services/lab-management/app/models/: __init__.py  access_permission.py  access_request.py  appointment.py  audit_log.py  file_attachment.py  lab_configuration.py  lab_service.py  payment.py  report.py  test_definition.py  test_duration.py  test_order.py  token.py
services/lab-management/app/repositories/: appointment_repo.py  audit_repo.py  base_repo.py  consent_repo.py  lab_service_repo.py  payment_repo.py  report_repo.py  test_order_repo.py
services/lab-management/app/schemas/: appointment.py  consent.py  lab_service.py  payment.py  report.py  test_order.py  validators.py
services/lab-management/app/services/: advanced_slot_service.py  appointment_service.py  audit_service.py  business_rules.py  consent_service.py  event_publisher.py  lab_service_service.py  payment_service.py  report_service.py  slot_management_service.py  test_order_service.py  workflow_service.py
services/lab-management/app/tasks/: appointment_tasks.py  celery_app.py  notification_tasks.py
services/lab-management/protos/: user_service.proto
services/lab-management/scripts/: generate_test_token.py  init-test-db.sh  populate_data.bat  populate_data.py  populate_data.sh  run_new_tests.py  run_new_tests_docker.bat  run_new_tests_docker.sh  run_tests.bat  run_tests.sh  start_services.bat  start_services.sh  test_new_features_only.py
services/lab-management/tests/: conftest.py  conftest_simple.py  test_async_setup.py  test_dependency_override.py  test_routes.py  testing_session.py
services/lab-management/tests/integration/: test_appointment_workflow.py  test_lab_configuration.py  test_slot_conflict_scenarios.py
services/lab-management/tests/repositories/: test_async_repositories.py
services/lab-management/tests/services/: test_lab_service.py
services/lab-management/tests/unit/: conftest.py  test_advanced_slot_service.py  test_audit_service.py  test_business_rules.py  test_cache_service.py  test_celery_tasks.py  test_exceptions.py  test_rate_limiter.py  (+2 more)
services/pharma-management/: API_ENDPOINTS.md  Dockerfile  Dockerfile.prod  IMPLEMENTATION_COMPLETE.md  MISSING_COMPONENTS_FIXED.md  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_tests.bat  run_tests.sh
services/pharma-management/alembic/: env.py
services/pharma-management/app/: __init__.py  grpc_client.py  main.py
services/pharma-management/logs/: pharma_test_data.xlsx
services/pharma-management/scripts/: init-db.sh  populate_test_data.py  run_populate.py
services/pharma-management/tests/: README.md  __init__.py  __main__.py  conftest.py  run_tests.py
services/user-management/: Dockerfile  Dockerfile.prod  create_merge_migration.sh  create_patients_org.bat  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  generate_grpc.bat  init_db.sh  pyproject.toml  requirements.txt  run_direct.sh  run_integration_test.bat  run_migrations.sh  test_notification_integration.py  update_photo_urls.py
services/user-management/alembic/: env.py
services/user-management/app/: main.py
services/user-management/scripts/: add_image_columns.py  add_missing_insurance_fields.py  add_refresh_tokens_table.py  add_timestamp_columns.py  add_timestamp_columns.sh  add_timestamps.sh  check_tables_exist.py  create_patients_org.sql  fix_database.py  fix_init_db.sh  fix_null_organization_ids.py  init-db.sql  init_schema.sql  merge_migration_heads.py  modify_init_db.py  simple_init_db.py
services/user-management/tests/: conftest.py  testing_session.py
(+429 files in other folders)
