[tool.poetry]
name = "pharma-management"
version = "1.0.0"
description = "Enterprise-grade pharma microservice for prescription management, inventory, and compliance"
authors = ["Senior Architect <architect@ehealth.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = {extras = ["email"], version = "^2.7.4"}
pydantic-settings = "^2.3.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
celery = "^5.4.0"
redis = "^5.0.7"
boto3 = "^1.34.131"
python-multipart = "^0.0.9"
python-json-logger = "^2.0.7"
python-dotenv = "^1.0.1"
grpcio = "^1.64.1"
protobuf = "^5.27.1"
psycopg2-binary = "^2.9.9"
pillow = "^10.0.0"
pytesseract = "^0.3.10"
opencv-python = "^4.8.0"
twilio = "^8.5.0"
sendgrid = "^6.10.0"
cryptography = "^41.0.0"
httpx = "^0.27.0"
aiofiles = "^23.0.0"
schedule = "^1.2.0"
pandas = "^2.0.0"
openpyxl = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^4.1.0"
httpx = "^0.27.0"
aiosqlite = "^0.19.0"
faker = "^26.0.0"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"